// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalList /> should not render list if proposal is not provided 1`] = `
<p
  className="p--centered"
  style={
    Object {
      "marginBottom": "40px",
    }
  }
>
  <FormattedMessage
    id="proposal.private.empty"
    values={Object {}}
  />
</p>
`;

exports[`<ProposalList /> should render a collectStep proposal list 1`] = `
<Row
  bsClass="row"
  componentClass="div"
>
  <ul
    className="media-list proposal-preview-list opinion__list"
  >
    <div>
      <Relay(ProposalPreview)
        proposal={
          Object {
            "id": "1",
          }
        }
        step={
          Object {
            "form": Object {
              "proposals": Object {
                "edges": Array [
                  Object {
                    "node": Object {
                      "id": "1",
                    },
                  },
                  Object {
                    "node": Object {
                      "id": "2",
                    },
                  },
                ],
                "totalCount": 2,
              },
            },
            "id": "1",
          }
        }
        viewer={null}
      />
      <Relay(ProposalPreview)
        proposal={
          Object {
            "id": "2",
          }
        }
        step={
          Object {
            "form": Object {
              "proposals": Object {
                "edges": Array [
                  Object {
                    "node": Object {
                      "id": "1",
                    },
                  },
                  Object {
                    "node": Object {
                      "id": "2",
                    },
                  },
                ],
                "totalCount": 2,
              },
            },
            "id": "1",
          }
        }
        viewer={null}
      />
    </div>
  </ul>
  0
</Row>
`;

exports[`<ProposalList /> should render a selectionStep proposal list 1`] = `
<Row
  bsClass="row"
  componentClass="div"
>
  <ul
    className="media-list proposal-preview-list opinion__list"
  >
    <div>
      <Relay(ProposalPreview)
        proposal={
          Object {
            "id": "1",
          }
        }
        step={
          Object {
            "id": "1",
            "proposals": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "id": "1",
                  },
                },
                Object {
                  "node": Object {
                    "id": "2",
                  },
                },
              ],
              "totalCount": 2,
            },
          }
        }
        viewer={null}
      />
      <Relay(ProposalPreview)
        proposal={
          Object {
            "id": "2",
          }
        }
        step={
          Object {
            "id": "1",
            "proposals": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "id": "1",
                  },
                },
                Object {
                  "node": Object {
                    "id": "2",
                  },
                },
              ],
              "totalCount": 2,
            },
          }
        }
        viewer={null}
      />
    </div>
  </ul>
  0
</Row>
`;
